Table interact alteration

--- a/src/main/resources/styles/style.css
+++ b/src/main/resources/styles/style.css
@@ -40,3 +40,31 @@
 .scroll-pane > .corner {
     -fx-background-color: black;
 }
+
+.text-field-table-cell .text-field {
+   -fx-padding: 1;
+   -fx-border-color:red;
+   -fx-border-width:1;
+   -fx-background-color:yellow;
+ }
+.table-cell:focused {
+   -fx-padding: 0;
+}
+
+/* right-align the cell content in view mode */
+.table-cell {
+    -fx-alignment: CENTER-RIGHT;
+}
+/* right-align the cell content in edit mode */
+.text-field {
+    -fx-alignment: CENTER-RIGHT;
+}
+
+/* colorize background only of rows which have data */
+.table-row-cell:empty {
+    -fx-background-color: white;
+}
+
+.table-row-cell:empty .table-cell {
+    -fx-border-width: 0px;
+}
