--- a/src/main/resources/fxml/MovimentacaoEntradaScreen.fxml
+++ b/src/main/resources/fxml/MovimentacaoEntradaScreen.fxml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
+<?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
 <?import javafx.scene.text.Font?>
@@ -11,12 +11,12 @@
                 <ColumnConstraints hgrow="SOMETIMES" maxWidth="-Infinity" minWidth="-Infinity" prefWidth="1023.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="39.0" valignment="CENTER" vgrow="ALWAYS" />
+                <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="39.0" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="110.0" vgrow="SOMETIMES" />
                 <RowConstraints maxHeight="-Infinity" minHeight="-Infinity" prefHeight="450.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <TableView fx:id="tbEntrada" accessibleRole="IMAGE_VIEW" editable="true" prefHeight="600.0" prefWidth="1024.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
+                <TableView fx:id="tbMovEntrada" accessibleRole="IMAGE_VIEW" editable="true" onKeyPressed="#TabelaKeyPressed" onKeyReleased="#TabelaKeyReleased" prefHeight="600.0" prefWidth="1024.0" GridPane.halignment="CENTER" GridPane.hgrow="ALWAYS" GridPane.rowIndex="2" GridPane.valignment="CENTER" GridPane.vgrow="ALWAYS">
                     <columns>
                         <TableColumn fx:id="clId" maxWidth="-Infinity" minWidth="100.0" prefWidth="100.0" text="ID" />
                         <TableColumn fx:id="clIdEntrada" maxWidth="-Infinity" minWidth="100.0" prefWidth="100.0" text="ID Entrada" />
@@ -39,36 +39,58 @@
                 </Label>
                 <HBox prefHeight="100.0" prefWidth="200.0" GridPane.rowIndex="1">
                     <children>
-                        <VBox prefHeight="200.0" prefWidth="100.0">
+                        <VBox minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="160.0">
                             <children>
-                                <Button fx:id="btBuscar" mnemonicParsing="false" onAction="#buscarTodos" text="Buscar" />
+                                <Button fx:id="btAtualizar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#atualizarTabela" prefWidth="140.0" text="Atualizar Tabela">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin></Button>
                             </children>
+                     <HBox.margin>
+                        <Insets />
+                     </HBox.margin>
                         </VBox>
-                        <VBox prefHeight="110.0" prefWidth="306.0">
+                  <VBox layoutX="10.0" layoutY="10.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="110.0" prefWidth="160.0">
+                     <children>
+                        <Button fx:id="btGravar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#gravarAlteracoes" prefWidth="140.0" text="Gravar Alterações">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                        <Button fx:id="btDeletarItem" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#deletarItem" prefWidth="140.0" text="Deletar Movimentação">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
+                        </Button>
+                     </children>
+                  </VBox>
+                        <VBox prefHeight="110.0" prefWidth="320.0">
                             <children>
-                                <Label text="Produto" />
-                                <ComboBox fx:id="cbProduto" onMouseClicked="#cbProdutoClick" prefHeight="25.0" prefWidth="305.0" />
-                            </children>
-                            <HBox.margin>
-                                <Insets left="15.0" />
-                            </HBox.margin>
-                        </VBox>
-                        <VBox prefHeight="110.0" prefWidth="133.0">
-                            <HBox.margin>
-                                <Insets left="15.0" />
-                            </HBox.margin>
-                        </VBox>
-                        <HBox prefHeight="100.0" prefWidth="200.0">
-                            <children>
-                                <Button fx:id="btAdicionar" mnemonicParsing="false" onAction="#adicionarMovimentacaoEntrada" text="Adicionar">
-                                    <HBox.margin>
-                                        <Insets left="15.0" />
-                                    </HBox.margin>
+                                <Button fx:id="btAdicionar" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" mnemonicParsing="false" onAction="#adicionarItem" prefWidth="180.0" text="Adicionar Nova Movimentação">
+                           <VBox.margin>
+                              <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
+                           </VBox.margin>
                                 </Button>
+                                <Label fx:id="lbProdutoCB" text="Produto" visible="false">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin></Label>
+                                <ComboBox fx:id="cbProduto" onMouseClicked="#cbProdutoClick" prefHeight="25.0" prefWidth="305.0" visible="false">
+                           <VBox.margin>
+                              <Insets left="10.0" right="10.0" />
+                           </VBox.margin></ComboBox>
                             </children>
-                        </HBox>
+                            <HBox.margin>
+                                <Insets />
+                            </HBox.margin>
+                        </VBox>
                     </children>
                 </HBox>
+            <Label fx:id="lbFechar" alignment="TOP_RIGHT" text="X" GridPane.halignment="RIGHT" GridPane.valignment="TOP">
+               <font>
+                  <Font name="System Bold" size="16.0" />
+               </font>
+            </Label>
             </children>
         </GridPane>
     </children>
