--- a/src/main/resources/fxml/MovimentacaoEntradaScreen.fxml
+++ b/src/main/resources/fxml/MovimentacaoEntradaScreen.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import br.com.spartaseller.util.ComponentsModels.DoubleTextField?>
 <?import br.com.spartaseller.util.ComponentsModels.NumberTextField?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -73,11 +74,11 @@
                               <Insets left="10.0" right="10.0" top="10.0" />
                            </VBox.margin>
                         </Label>
-                        <TextField fx:id="txtValorUnit" onKeyPressed="#txtValUnitKeyPress">
+                        <DoubleTextField fx:id="txtValorUnit" onKeyPressed="#txtValUnitKeyPress">
                            <VBox.margin>
                               <Insets left="10.0" right="10.0" />
                            </VBox.margin>
-                        </TextField>
+                        </DoubleTextField>
                             </children>
                             <HBox.margin>
                                 <Insets />
